unpackaged/main/default/objects/Lead/fields/Page_Source__c.field-meta.xml
<CustomField>
    <fullName>Page_Source__c</fullName>
    <label>Page Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Book Details - Science - HS - Biology</fullName>
            </value>
            <value>
                <fullName>Book Details - Science - HS - Concepts of Biology</fullName>
            </value>
            <value>
                <fullName>Book Details - Science - HS - Microbiology</fullName>
            </value>
            <value>
                <fullName>Book Details - Science - HS - Anatomy &amp; Physiology</fullName>
            </value>
            <value>
                <fullName>Book Details - Science - HS - High School Physics</fullName>
            </value>
            <value>
                <fullName>Book Details - Science HS - Chemistry</fullName>
            </value>
            <value>
                <fullName>Book Details - Science - HS - Chemistry Atoms First</fullName>
            </value>
            <value>
                <fullName>Book Details - Science - HS - College Physics</fullName>
            </value>
            <value>
                <fullName>Book Details - Science - HS - Biology for AP Courses</fullName>
            </value>
            <value>
                <fullName>Book Details - Science - HS - Physics for AP Courses</fullName>
            </value>
            <value>
                <fullName>Book Details - Science - HS - University Physics</fullName>
            </value>
            <value>
                <fullName>Book Details - Math - HS - Prealgebra</fullName>
            </value>
            <value>
                <fullName>Book Details - Math - HS - Elementary Algebra</fullName>
            </value>
            <value>
                <fullName>Book Details - Math - HS - Intermediate Algebra</fullName>
            </value>
            <value>
                <fullName>Book Details - Math - HS - Algebra &amp; Trigonometry</fullName>
            </value>
            <value>
                <fullName>Book Details - Math - HS - High School Statistics</fullName>
            </value>
            <value>
                <fullName>Book Details - Math - HS - Introductory Statistics</fullName>
            </value>
            <value>
                <fullName>Book Details - Math - HS - Precalculus</fullName>
            </value>
            <value>
                <fullName>Book Details - Math - HS - Calculus</fullName>
            </value>
            <value>
                <fullName>Book Details - Social Science - HS - AP Macroeconomics</fullName>
            </value>
            <value>
                <fullName>Book Details - Social Science - HS - AP Microeconomics</fullName>
            </value>
            <value>
                <fullName>Book Details - Social Science - HS - Principles of Economics</fullName>
            </value>
            <value>
                <fullName>Book Details - Social Science - HS - Macroeconomics</fullName>
            </value>
            <value>
                <fullName>Book Details - Social Science - HS - Microeconomics</fullName>
            </value>
            <value>
                <fullName>Book Details - Social Studies - HS - US History</fullName>
            </value>
            <value>
                <fullName>Book Details - Social Studies - HS - AP US History</fullName>
            </value>
            <value>
                <fullName>Book Details - Social Studies - HS - American Government</fullName>
            </value>
            <value>
                <fullName>Book Details - Business - HS - Intro to Business</fullName>
            </value>
            <value>
                <fullName>Book Details - Business - HS - Business Ethics</fullName>
            </value>
            <value>
                <fullName>Book Details - Business - HS - Business Law Essentials 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>