unpackaged/main/default/objects/Lead/fields/Partner_Category_Interest__c.field-meta.xml
<CustomField>
    <fullName>Partner_Category_Interest__c</fullName>
    <label>Partner Category Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online Homework Partners</fullName>
            </value>
            <value>
                <fullName>Adaptive Courseware Partners</fullName>
            </value>
            <value>
                <fullName>Customization Tool Partners</fullName>
            </value>
            <value>
                <fullName>Custom Printer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>