unpackaged/main/default/objects/Lead/fields/Partner_Interest__c.field-meta.xml
<CustomField>
    <fullName>Partner_Interest__c</fullName>
    <label>Partner in Use</label>
    <length>100</length>
    <type>Text</type>
</CustomField>