unpackaged/main/default/objects/Lead/fields/Partner_Interest_Other__c.field-meta.xml
<CustomField>
    <fullName>Partner_Interest_Other__c</fullName>
    <label>Partner in Use - Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>