unpackaged/main/default/objects/Lead/fields/Partner_Present__c.field-meta.xml
<CustomField>
    <fullName>Partner_Present__c</fullName>
    <formula>OR(
NOT(ISBLANK(Partner_Category_Interest__c)),
NOT(ISBLANK(Partner_Interest__c)),
NOT(ISBLANK(Form_Partner__c)),
NOT(ISBLANK(Partner_selected_on_marketplace_form__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Present</label>
    <type>Checkbox</type>
</CustomField>