unpackaged/main/default/objects/Lead/fields/Partner_selected_on_marketplace_form__c.field-meta.xml
<CustomField>
    <fullName>Partner_selected_on_marketplace_form__c</fullName>
    <label>Partner selected on marketplace form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>