unpackaged/main/default/objects/Lead/fields/Process_Adoptions__c.field-meta.xml
<CustomField>
    <fullName>Process_Adoptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to indicate when the AdoptionsJSON field needs to be parsed into Book Opps</description>
    <label>Process Adoptions?</label>
    <type>Checkbox</type>
</CustomField>