unpackaged/main/default/objects/Lead/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No longer teaching the course</fullName>
            </value>
            <value>
                <fullName>No longer working at the school</fullName>
            </value>
            <value>
                <fullName>Dissatisfied with the resources</fullName>
            </value>
            <value>
                <fullName>Never used OpenStax book</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>