unpackaged/main/default/objects/Lead/fields/Reason_Lost_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost_Other__c</fullName>
    <label>Reason Lost Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>