unpackaged/main/default/objects/Lead/fields/Referee_Email__c.field-meta.xml
<CustomField>
    <fullName>Referee_Email__c</fullName>
    <label>Referee Email</label>
    <type>Email</type>
</CustomField>