unpackaged/main/default/objects/Lead/fields/Referee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Referee_Last_Name__c</fullName>
    <label>Referee Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>