unpackaged/main/default/objects/Lead/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <description>Populated from OSC website forms. Contains referrer name. Used for the emails being sent out.</description>
    <label>Referrer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>