unpackaged/main/default/objects/Lead/fields/Reject_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reject_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reject Email Sent</label>
    <type>Checkbox</type>
</CustomField>