unpackaged/main/default/objects/Lead/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad School Info</fullName>
            </value>
            <value>
                <fullName>Homeschool no info</fullName>
            </value>
            <value>
                <fullName>Unverifiable</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>