unpackaged/main/default/objects/Lead/fields/Revamp__c.field-meta.xml
<CustomField>
    <fullName>Revamp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revamp</label>
    <type>Checkbox</type>
</CustomField>