unpackaged/main/default/objects/Lead/fields/Review_School__c.field-meta.xml
<CustomField>
    <fullName>Review_School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review School</label>
    <type>Checkbox</type>
</CustomField>