unpackaged/main/default/objects/Lead/fields/School_Location__c.field-meta.xml
<CustomField>
    <fullName>School_Location__c</fullName>
    <formula>IF( ISBLANK(School__c) ,
  IF( OR(Country = "United States", Country = "United States Territory"),
  "Domestic",
  "Foreign"
  ),

School__r.School_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Location</label>
    <type>Text</type>
</CustomField>