unpackaged/main/default/objects/Lead/fields/School_Total_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>School_Total_Enrollment__c</fullName>
    <description>Total Enrollment for the school to be used in Assignment.</description>
    <label>School Total Enrollment</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>