unpackaged/main/default/objects/Lead/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <description>School Type value used for assignment.</description>
    <label>School Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>