unpackaged/main/default/objects/Lead/fields/Section_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Section_Numbers__c</fullName>
    <label>Section Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>