unpackaged/main/default/objects/Lead/fields/SheerID_School_Name__c.field-meta.xml
<CustomField>
    <fullName>SheerID_School_Name__c</fullName>
    <description>School name as sent by sheer ID</description>
    <label>SheerID School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>