unpackaged/main/default/objects/Lead/fields/Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Signup_Date__c</fullName>
    <description>The date and time the user signed up for an OpenStax Account</description>
    <inlineHelpText>The date and time the user signed up for an OpenStax Account</inlineHelpText>
    <label>Signup Date</label>
    <type>DateTime</type>
</CustomField>