unpackaged/main/default/objects/Lead/fields/SkipFlow__c.field-meta.xml
<CustomField>
    <fullName>SkipFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SkipFlow</label>
    <type>Checkbox</type>
</CustomField>