unpackaged/main/default/objects/Lead/fields/Special_Book_List__c.field-meta.xml
<CustomField>
    <fullName>Special_Book_List__c</fullName>
    <label>Special Book List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principles of Accounting</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Business Ethics</fullName>
            </value>
            <value>
                <fullName>Principles of Management</fullName>
            </value>
            <value>
                <fullName>Introduction to Business</fullName>
            </value>
            <value>
                <fullName>Organizational Behavior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>