unpackaged/main/default/objects/Lead/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs School</fullName>
            </value>
            <value>
                <fullName>Needs Contact</fullName>
            </value>
            <value>
                <fullName>Needs Opportunity</fullName>
            </value>
            <value>
                <fullName>Needs FV</fullName>
            </value>
            <value>
                <fullName>Needs Partner</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>