unpackaged/main/default/objects/Lead/fields/Student_No_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_No_Status__c</fullName>
    <label>Student No. Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Estimate</fullName>
                <default>true</default>
                <label>Estimate</label>
            </value>
            <value>
                <fullName>Auto-Guess</fullName>
            </value>
            <value>
                <fullName>Reported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>