unpackaged/main/default/objects/Lead/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Populated when someone is interested or adopting a book</description>
    <label>Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Algebra and Trigonometry</fullName>
            </value>
            <value>
                <fullName>American Government</fullName>
            </value>
            <value>
                <fullName>Anatomy &amp; Physiology</fullName>
            </value>
            <value>
                <fullName>Anthropology</fullName>
            </value>
            <value>
                <fullName>AP Bio</fullName>
            </value>
            <value>
                <fullName>AP Macro Econ</fullName>
            </value>
            <value>
                <fullName>AP Micro Econ</fullName>
            </value>
            <value>
                <fullName>AP Physics</fullName>
            </value>
            <value>
                <fullName>Astronomy</fullName>
            </value>
            <value>
                <fullName>Basic College Math</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Business Ethics</fullName>
            </value>
            <value>
                <fullName>Business Law I Essentials</fullName>
            </value>
            <value>
                <fullName>Business Statistics</fullName>
            </value>
            <value>
                <fullName>Calculus</fullName>
            </value>
            <value>
                <fullName>Career Readiness</fullName>
            </value>
            <value>
                <fullName>Chem: Atoms First</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>College Algebra</fullName>
            </value>
            <value>
                <fullName>College Algebra with Corequisite Support</fullName>
            </value>
            <value>
                <fullName>College Physics (Algebra)</fullName>
            </value>
            <value>
                <fullName>College Success</fullName>
            </value>
            <value>
                <fullName>Concepts of Bio (non-majors)</fullName>
            </value>
            <value>
                <fullName>Contemporary Math</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Elementary Algebra</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Financial Accounting</fullName>
            </value>
            <value>
                <fullName>Finite Algebra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>