unpackaged/main/default/objects/Lead/fields/Subject_Interest__c.field-meta.xml
<CustomField>
    <fullName>Subject_Interest__c</fullName>
    <label>Subject Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Books</valueSetName>
    </valueSet>
</CustomField>