unpackaged/main/default/objects/Lead/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>IF(MONTH(Class_Start_Date__c)&gt;6, "Fall", "Spring")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <type>Text</type>
</CustomField>