unpackaged/main/default/objects/Lead/fields/TermYear__c.field-meta.xml
<CustomField>
    <fullName>TermYear__c</fullName>
    <formula>CASE(IF(Month(Class_Start_Date__c) &gt;6, 
year( Class_Start_Date__c ), 
year( Class_Start_Date__c )-1), 
2011, "2011 - 12", 
2012, "2012 - 13", 
2013, "2013 - 14", 
2014, "2014 - 15", 
2015, "2015 - 16", 
2016, "2016 - 17", 
2017, "2017 - 18", 
2018, "2018 - 19", 
2019, "2019 - 20", 
2020, "2020 - 21", 
2021, "2021 - 22", 
2022, "2022 - 23", 
"fix formula") &amp;" "&amp; IF(MONTH(Class_Start_Date__c)&gt;6, "Fall", "Spring")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TermYear</label>
    <type>Text</type>
</CustomField>