unpackaged/main/default/objects/Lead/fields/Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Testimonial__c</fullName>
    <label>Testimonial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>