unpackaged/main/default/objects/Lead/fields/Title_1_school__c.field-meta.xml
<CustomField>
    <fullName>Title_1_school__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title 1 school</label>
    <type>Checkbox</type>
</CustomField>