unpackaged/main/default/objects/Lead/fields/Total_Potential_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Potential_Score__c</fullName>
    <formula>Total_MQL_Score__c  +  Total_SQL_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Potential Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>