unpackaged/main/default/objects/Lead/fields/What_Happened__c.field-meta.xml
<CustomField>
    <fullName>What_Happened__c</fullName>
    <label>What Happened?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>