unpackaged/main/default/objects/Lead/fields/Which_Book_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Which_Book_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Which Book Email Sent</label>
    <type>Checkbox</type>
</CustomField>