unpackaged/main/default/objects/Lead/fields/who_chooses_books__c.field-meta.xml
<CustomField>
    <fullName>who_chooses_books__c</fullName>
    <description>Who did the user say was responsible for book selection at their school during signup</description>
    <inlineHelpText>Who did the user say was responsible for book selection at their school during signup</inlineHelpText>
    <label>Who Chooses Books?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>