unpackaged/main/default/objects/Lead/listViews/All_Leads_Today.listView-meta.xml
<ListView>
    <fullName>All_Leads_Today</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Status__c</columns>
    <columns>Role__c</columns>
    <columns>FV_Status__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Role__c</field>
        <operation>notEqual</operation>
        <value>Student</value>
    </filters>
    <label>All Leads Today</label>
</ListView>