unpackaged/main/default/objects/Lead/listViews/All_Open_Leads.listView-meta.xml
<ListView>
    <fullName>All_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Role__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Signup_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Open Leads</label>
</ListView>