unpackaged/main/default/objects/Lead/listViews/Converted.listView-meta.xml
<ListView>
    <fullName>Converted</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/20/2021 12:00 AM</value>
    </filters>
    <label>Converted</label>
</ListView>