unpackaged/main/default/objects/Lead/listViews/FV_Needs_Review.listView-meta.xml
<ListView>
    <fullName>FV_Needs_Review</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>OpenStax_Account_Signup_Date__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Account Creation</value>
    </filters>
    <filters>
        <field>Role__c</field>
        <operation>notEqual</operation>
        <value>Student</value>
    </filters>
    <filters>
        <field>FV_Status__c</field>
        <operation>notEqual</operation>
        <value>rejected_faculty</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Converted</value>
    </filters>
    <label>FV Needs Review</label>
</ListView>