unpackaged/main/default/objects/Lead/listViews/Internal_Sales_Leads.listView-meta.xml
<ListView>
    <fullName>Internal_Sales_Leads</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_Students__c</field>
        <operation>greaterOrEqual</operation>
        <value>200</value>
    </filters>
    <filters>
        <field>School_Total_Enrollment__c</field>
        <operation>greaterOrEqual</operation>
        <value>5000</value>
    </filters>
    <filters>
        <field>School_Type__c</field>
        <operation>equals</operation>
        <value>College/University (4)</value>
    </filters>
    <label>Internal Sales Leads</label>
</ListView>