unpackaged/main/default/objects/Lead/listViews/Scored_Leads.listView-meta.xml
<ListView>
    <fullName>Scored_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD_SCORE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD_SCORE</field>
        <operation>notEqual</operation>
    </filters>
    <label>Scored Leads</label>
    <sharedTo>
        <group>Developers</group>
        <group>Marketing</group>
    </sharedTo>
</ListView>